tests/errors/runtime/003.ura
// errors/runtime/003 — infinite recursion overflows the stack

fn recurse(n int) int:
    return recurse(n)

main():
    return recurse(1)